# pshm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE.txt  NOTICE  README.md  bootstrap.cmd  bootstrap.sh
cmake/Modules/: pshm_config.cmake  pshm_cpack.cmake  pshm_doxygen.cmake
include/: CMakeLists.txt
include/pshm/: allocation_tracer.hpp  config.hpp.in  flags.hpp  posix_shm_object.hpp  shm_object.hpp  shm_object_native.hpp  shm_ptr.hpp  stdcpp.hpp  tracing.hpp
lib/: CMakeLists.txt  flags.cpp  posix_shm_object.cpp  pshmConfig.cmake.in  shm_object.cpp
testing/: CMakeLists.txt  TestFailure.hpp  main.cpp  shm_object_create_excl.cpp  shm_object_create_ro.cpp  shm_object_create_rw.cpp  shm_object_fields.cpp  shm_object_get.cpp  shm_object_move_assignment.cpp  shm_object_move_constructor.cpp  shm_ptr_default_constructor.cpp  shm_ptr_fork.cpp  shm_ptr_get.cpp  shm_ptr_hash_specialization.cpp  shm_ptr_move_assignment.cpp  shm_ptr_move_constructor.cpp  shm_ptr_nullptr_assignment.cpp  shm_ptr_nullptr_constructor.cpp  shm_ptr_swap.cpp  testing.hpp
